# aws-tf-baseline-backend

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/models/base/: account.py  global.py  region.py  terragrunt_base.py
app/templates/base/: account.hcl.j2  global.hcl.j2  region.hcl.j2  terragrunt_base.hcl.j2
tests/: test_main.py
