[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-tf-baseline-backend"
version = "1.0.0"
description = "Backend API for AWS Terraform baseline infrastructure management"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Andrey Voroshnin", email = "your.email@example.com" }]
keywords = ["aws", "terraform", "fastapi", "infrastructure"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.1", "pytest-asyncio>=0.23.5", "mypy>=1.8.0", "ruff>=0.2.2"]

[project.urls]
Homepage = "https://github.com/your-org/aws-tf-baseline-backend"
Repository = "https://github.com/your-org/aws-tf-baseline-backend.git"
Documentation = "https://github.com/your-org/aws-tf-baseline-backend#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
